--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "clean": "rimraf ./dist",
     "watch": "tsc --watch",
     "prepublishOnly": "npm run build",
-    "publish:cocoapod": "pod trunk push ./CapacitorCamera.podspec --allow-warnings"
+    "publish:cocoapod": "pod trunk push ./CapacitorCamera.podspec --allow-warnings",
+    "preinstall": "npm run build"
   },
   "devDependencies": {
     "@capacitor/android": "^6.0.0",
